<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.uncc.contactsdirectory.DeleteContact"
    android:orientation="vertical"
    android:id="@+id/layout_deleteContact">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_btn_selectContact"
        android:id="@+id/btn_selectContactToDel"
        android:layout_marginBottom="@dimen/pad_edt"
        android:enabled="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_nameToDel"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/pad_edt"
        android:paddingRight="@dimen/pad_edt"
        android:layout_marginBottom="@dimen/pad_edt"
        android:hint="@string/hint_edt_name"
        android:enabled="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edt_phoneToDel"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/pad_edt"
        android:paddingRight="@dimen/pad_edt"
        android:layout_marginBottom="@dimen/pad_edt"
        android:hint="@string/hint_edt_phone"
        android:enabled="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edt_emailToDel"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/pad_edt"
        android:paddingRight="@dimen/pad_edt"
        android:layout_marginBottom="@dimen/pad_edt"
        android:hint="@string/hint_edt_email"
        android:enabled="false" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_addImageToDel"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/default_contact_image"
        android:background="@color/background_color"
        android:layout_marginBottom="@dimen/pad_edt"
        android:enabled="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_cont_del_cancel_btn"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_delContact"
            android:id="@+id/btn_delContact"
            android:layout_marginBottom="@dimen/dim_bottom_spacing"
            android:layout_marginRight="@dimen/activityPadding"
            android:minWidth="@dimen/btn_half_width_min" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_cancel"
            android:id="@+id/btn_cancelDelContact"
            android:layout_marginLeft="@dimen/activityPadding"
            android:layout_marginBottom="@dimen/dim_bottom_spacing"
            android:minWidth="@dimen/btn_half_width_min" />

    </LinearLayout>

</LinearLayout>
